/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "org.apache.raft.grpc.proto";
option java_outer_classname = "RaftClientProtocolProtos";
option java_generate_equals_and_hash = true;
package raft.grpc;

import "Raft.proto";

service RaftClientProtocolService {
  // A client-to-server RPC request
  rpc submitRequest(raft.common.RaftClientRequestProto)
      returns(raft.common.RaftClientReplyProto) {}

  // A client-to-server RPC to set new raft configuration
  rpc setConfiguration(raft.common.SetConfigurationRequestProto)
      returns(raft.common.RaftClientReplyProto) {}

  // A client-to-server stream RPC to append data
  rpc append(stream raft.common.RaftClientRequestProto)
      returns (stream raft.common.RaftClientReplyProto) {}
}
